added new files and projects

--- a/project.html
+++ b/project.html
@@ -35,17 +35,17 @@
             <div class="card">
                 <h3>Weather App</h3>
                 <p>Weather app using OpenWeather API with real-time data.</p>
-                <a href="#">Live Demo</a>
+                <a href="https://github.com/Khanali-1/weather-app" target="_blank">View Project</a>
             </div>
              <div class="card">
                 <h3>Digital Clock</h3>
                 <p> A real-time digital clock built using JavaScript that displays hours,minutes, and seconds with live updates.</p>
-                <a href="#" target="_blank">View Project</a>
+                <a href="https://github.com/Khanali-1/Digital-Clock" target="_blank">View Project</a>
             </div>
              <div class="card">
                 <h3>Rock Paper Scissors</h3>
                 <p> Rock Paper Scissors game using JavaScript logic,user input handling, and dynamic result display.</p>
-                <a href="#" target="_blank">View Project</a>
+                <a href="https://github.com/Khanali-1/Rock-Paper-Scissor" target="_blank">View Project</a>
             </div>
              <div class="card">
                 <h3>Image Slider</h3>
@@ -56,6 +56,11 @@
                 <h3>Calculator</h3>
                 <p>A functional calculator created using HTML, CSS, and JavaScriptsupporting basic arithmetic operations.</p>
                 <a href="#" target="_blank">View Project</a>
+            </div>
+             <div class="card">
+                <h3>MovieHub.</h3>
+                <p>A responsive movie website built using HTML, CSS, and JavaScript that fetches real-time movie data from an API. It features top movies, random movies, and user authentication with login and register pages.</p>
+                <a href="https://github.com/Khanali-1/MovieHub" target="_blank">View Project</a>
             </div>
         </div>
         
